--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ body {
     font-family: Geneva, Verdana, Tahoma, sans-serif;
 }
 
+form {
+    
+}
+
 h2 {
     font-size: 26px;
 }
@@ -205,6 +209,7 @@ form {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 0.5fr 0.25fr 0.5fr 4fr;
         align-items: center;
+        column-gap: 1rem;
     }
         .wiki-search-result h3 {
             grid-column: span 2;
@@ -214,6 +219,8 @@ form {
         }
         .wiki-search-result img {
             grid-row: span 2;
+            min-height: 100%;
+            min-width: 100%;
         }
         .wiki-search-result img,
         .tag-container {
@@ -221,14 +228,14 @@ form {
         }
 
         .tag-container {
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.8rem;
         }
 
         .search-info {
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
-            justify-content: center;
+            gap: 0.75rem;
+            align-self:self-start;
         }
 
             
