--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ form {
 }
 
 h2 {
-    font-size: 26px;
+    font-size: 30px;
 }
 
 h3 {
@@ -54,6 +54,10 @@ h5 {
 
 img {
     max-width: 100%;
+}
+
+main {
+    margin: 2rem 1.25rem;
 }
 
 /* HEADER */
@@ -143,11 +147,10 @@ nav {
             background-image: url(img/caret-up-fill.png);
         }
 
-/* MAIN */
-main {
-    margin: 2rem 1.25rem;
-}
-    article {
+/* INDEX */
+
+    #index-main article,
+    #index-aside article {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
@@ -181,7 +184,7 @@ main {
                 color: var(--text-color)
             }
 
-/* WIKI-GAMES */
+/* WIKI-PAGES */
 #form-title {
     margin-bottom: 1rem;
     text-align: center;
@@ -238,6 +241,24 @@ form {
             align-self:self-start;
         }
 
+/* */
+
+/* ABOUT US */
+
+#about-main article{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+    .about-header {
+        margin: 1rem 0 0.75rem;
+    }
+    article#contact {
+        gap: 0.5rem;
+    }
+
+
             
 /* FOOTER */
 footer {
@@ -245,13 +266,15 @@ footer {
     padding: 1rem 0.25rem 0;
     border-top: 2px solid white;
 }
-    #github {
-        display: inline-block;
-        margin-top: 0.5rem;
-    }
-    #github::before {
+
+/* ICONS */
+
+.icon {
+    display: inline-block;
+    margin-top: 0.5rem;
+}
+    .icon::before {
         content: '';
-        background-image: url(img/github.png);
         background-repeat:round;
         vertical-align:bottom;
         margin-right: 0.25rem;
@@ -259,7 +282,15 @@ footer {
         height: 20px;
         display: inline-block;
     }
-
+    .threads::before {
+        background-image: url(img/threads.png);
+    }
+    .instagram::before {
+        background-image: url(img/instagram.png);
+    }
+    .github::before {
+        background-image: url(img/github.png);
+    }
 
 /* SCRIPTS */
 
